--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -4,22 +4,227 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Explore here"
+                "RANDOM FOREST"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 69,
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Your code here"
+                "import os\n",
+                "import pandas as pd\n",
+                "from sklearn.model_selection import train_test_split\n",
+                "from sklearn.ensemble import RandomForestClassifier\n",
+                "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
+                "from pickle import dump\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 70,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "csv_path = \"/workspaces/Random_Forest_Santi_Izquierdo/data/raw/decision_tree_diabetes_optimized.csv\"\n",
+                "sav_path = \"/workspaces/Random_Forest_Santi_Izquierdo/models/decision_tree_diabetes_optimized.sav\"\n",
+                "pred_csv_path = \"/workspaces/Random_Forest_Santi_Izquierdo/models/random_forest_predictions.csv\"\n",
+                "\n",
+                "\n",
+                "os.makedirs(os.path.dirname(csv_path), exist_ok=True)\n",
+                "os.makedirs(os.path.dirname(sav_path), exist_ok=True)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 71,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Dataset cargado correctamente\n",
+                        "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+                        "0            6      148             72             35        0  33.6   \n",
+                        "1            1       85             66             29        0  26.6   \n",
+                        "2            8      183             64              0        0  23.3   \n",
+                        "3            1       89             66             23       94  28.1   \n",
+                        "4            0      137             40             35      168  43.1   \n",
+                        "\n",
+                        "   DiabetesPedigreeFunction  Age  Outcome  \n",
+                        "0                     0.627   50        1  \n",
+                        "1                     0.351   31        0  \n",
+                        "2                     0.672   32        1  \n",
+                        "3                     0.167   21        0  \n",
+                        "4                     2.288   33        1  \n"
+                    ]
+                }
+            ],
+            "source": [
+                "df = pd.read_csv(csv_path)\n",
+                "print(\"Dataset cargado correctamente\")\n",
+                "print(df.head())"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 72,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Tamaño train: (614, 8), Tamaño test: (154, 8)\n"
+                    ]
+                }
+            ],
+            "source": [
+                "X = df.drop(\"Outcome\", axis=1)\n",
+                "y = df[\"Outcome\"]\n",
+                "\n",
+                "X_train, X_test, y_train, y_test = train_test_split(\n",
+                "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+                ")\n",
+                "\n",
+                "print(f\"Tamaño train: {X_train.shape}, Tamaño test: {X_test.shape}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 73,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Modelo Random Forest entrenado correctamente.\n"
+                    ]
+                }
+            ],
+            "source": [
+                "best_model = RandomForestClassifier(\n",
+                "    n_estimators=200,   \n",
+                "    max_depth=8,         \n",
+                "    random_state=42\n",
+                ")\n",
+                "\n",
+                "best_model.fit(X_train, y_train)\n",
+                "print(\"Modelo Random Forest entrenado correctamente.\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 74,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "📊 Resultados del modelo Random Forest:\n",
+                        "Accuracy:  0.7403\n",
+                        "Precision: 0.6522\n",
+                        "Recall:    0.5556\n",
+                        "F1-score:  0.6000\n",
+                        "\n",
+                        "Reporte completo:\n",
+                        "              precision    recall  f1-score   support\n",
+                        "\n",
+                        "           0       0.78      0.84      0.81       100\n",
+                        "           1       0.65      0.56      0.60        54\n",
+                        "\n",
+                        "    accuracy                           0.74       154\n",
+                        "   macro avg       0.71      0.70      0.70       154\n",
+                        "weighted avg       0.73      0.74      0.73       154\n",
+                        "\n"
+                    ]
+                }
+            ],
+            "source": [
+                "y_pred_best = best_model.predict(X_test)\n",
+                "\n",
+                "acc = accuracy_score(y_test, y_pred_best)\n",
+                "prec = precision_score(y_test, y_pred_best)\n",
+                "rec = recall_score(y_test, y_pred_best)\n",
+                "f1 = f1_score(y_test, y_pred_best)\n",
+                "\n",
+                "print(\"\\n📊 Resultados del modelo Random Forest:\")\n",
+                "print(f\"Accuracy:  {acc:.4f}\")\n",
+                "print(f\"Precision: {prec:.4f}\")\n",
+                "print(f\"Recall:    {rec:.4f}\")\n",
+                "print(f\"F1-score:  {f1:.4f}\")\n",
+                "\n",
+                "print(\"\\nReporte completo:\")\n",
+                "print(classification_report(y_test, y_pred_best))"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 75,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "Modelo guardado correctamente en: /workspaces/Random_Forest_Santi_Izquierdo/models/decision_tree_diabetes_optimized.sav\n"
+                    ]
+                }
+            ],
+            "source": [
+                "dump(best_model, open(sav_path, \"wb\"))\n",
+                "print(f\"\\nModelo guardado correctamente en: {sav_path}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 76,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Archivo CSV con predicciones guardado en: /workspaces/Random_Forest_Santi_Izquierdo/models/random_forest_predictions.csv\n",
+                        "\n",
+                        "Primeras filas del CSV:\n",
+                        "     Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
+                        "44             7      159             64              0        0  27.4   \n",
+                        "672           10       68            106             23       49  35.5   \n",
+                        "700            2      122             76             27      200  35.9   \n",
+                        "630            7      114             64              0        0  27.4   \n",
+                        "81             2       74              0              0        0   0.0   \n",
+                        "\n",
+                        "     DiabetesPedigreeFunction  Age  Real_Outcome  Predicted_Outcome  \n",
+                        "44                      0.294   40             0                  1  \n",
+                        "672                     0.285   47             0                  0  \n",
+                        "700                     0.483   26             0                  0  \n",
+                        "630                     0.732   34             1                  0  \n",
+                        "81                      0.102   22             0                  0  \n"
+                    ]
+                }
+            ],
+            "source": [
+                "resultados_df = X_test.copy()\n",
+                "resultados_df[\"Real_Outcome\"] = y_test.values\n",
+                "resultados_df[\"Predicted_Outcome\"] = y_pred_best\n",
+                "\n",
+                "resultados_df.to_csv(pred_csv_path, index=False)\n",
+                "print(f\"Archivo CSV con predicciones guardado en: {pred_csv_path}\")\n",
+                "print(\"\\nPrimeras filas del CSV:\")\n",
+                "print(resultados_df.head())"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+            "display_name": "Python 3",
             "language": "python",
             "name": "python3"
         },
@@ -33,14 +238,9 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.13"
+            "version": "3.11.4"
         },
-        "orig_nbformat": 4,
-        "vscode": {
-            "interpreter": {
-                "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
-            }
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
